Add any svg and change the background

--- a/src/assets/components/card/card.modules.scss
+++ b/src/assets/components/card/card.modules.scss
@@ -5,12 +5,19 @@
     align-items: center;
     justify-content: center;
     transform: translate(50% - 50%);
-    background-color: #FFF;
+    background: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
 }
 
-.bg {
-    background-image: url("../../image/background/bg-1.png");
+.svg-bg-top {
     position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.svg-bg-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 
 #card {
@@ -19,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    background: url('../../image/background/background-card.png');
+    background: /* url('../../image/background/background-card.png') */ #FFF;
     background-size: cover;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     padding: 30px;
