to update bottom

--- a/src/assets/components/contentCardProfile/cardProfile.modules.scss
+++ b/src/assets/components/contentCardProfile/cardProfile.modules.scss
@@ -29,9 +29,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    background: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
+    // background: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
     color: #FFF;
     width: 90%;
     height: 150px;
@@ -39,11 +39,17 @@
     padding: 10px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     cursor: pointer;
+    text-align: center;
 }
 
 .carrossel-card-profile .square-network {
     font-size: 25px;
     font-weight: 600;
+}
+
+.square-network h2 {
+    font-size: 25px;
+    color: #440377;
 }
 
 
