--- a/src/assets/components/contentCardProfile/Navegation/scss/style-scroll.scss
+++ b/src/assets/components/contentCardProfile/Navegation/scss/style-scroll.scss
@@ -1,10 +1,12 @@
 .navegation {
-  width: 70%;
-  height: 20vh;
-  margin: 0 auto;
+    width: 100%;
+  // height: 20vh;
+  // margin: 0 auto;
+  display: flex;
+  // flex-direction: row;
 
   @media screen and (max-width: 768px) {
-    width: 100%;
+    // width: 100%;
   }
 }
 
