--- a/src/assets/components/contentCardProfile/cardProfile.modules.scss
+++ b/src/assets/components/contentCardProfile/cardProfile.modules.scss
@@ -77,9 +77,9 @@
     background: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
     color: #FFF;
     width: 200px;
-    height: 150px;
+    height: 90px;
     border-radius: 26px;
-    padding: 10px;
+    margin: 0px auto;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     cursor: pointer;
 }
