--- a/src/assets/components/contentCardProfile/Navegation/scss/style-scroll.scss
+++ b/src/assets/components/contentCardProfile/Navegation/scss/style-scroll.scss
@@ -1,9 +1,12 @@
 .navegation {
     width: 100%;
-  // height: 20vh;
+    // height: 100%;
+    // height: zvh;
   // margin: 0 auto;
-  display: flex;
+  // display: flex;
   // flex-direction: row;
+
+
 
   @media screen and (max-width: 768px) {
     // width: 100%;
@@ -20,6 +23,7 @@
   scrollbar-width: none;
   /* Firefox */
 }
+
 
 a {
   text-decoration: none;
