--- a/src/assets/components/contentCardProfile/cardProfile.modules.scss
+++ b/src/assets/components/contentCardProfile/cardProfile.modules.scss
@@ -69,31 +69,46 @@
 }
 
 #btnNavegation{
-    display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
     justify-content: space-around;
     background: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
     color: #FFF;
-    width: 200px;
+    width: 370px;
     height: 90px;
     border-radius: 26px;
-    margin: 0px auto;
+    margin: 0px 10px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     cursor: pointer;
+    transition: .3s;
+    z-index: 2;
 }
 
-#btnNavegation button {
-    padding: 10px 35px;
-    margin: 0px 20px 0 20px;
-    border: 2px solid #3747A6;
-    background-color: #435AD9;
-    color: #FFF;
-    text-transform: uppercase;
-    font-family: 'LemonMilkMedium';
-    z-index: 999;
-    cursor: pointer;
-    width: 230px;
-    border-radius: 12px;
+.react-horizontal-scrolling-menu--item {
+    height: 150px;
 }
+
+#btnNavegation:hover {
+    margin-bottom: 100px;
+    height: 110px;
+    background: #FFF;
+    // color: linear-gradient(0deg, rgba(193, 180, 204, 0.2), rgba(193, 180, 204, 0.2)), linear-gradient(157.45deg, #7743CD 41.34%, #440377 97.25%) !important;
+}
+
+#btnNavegation img {
+    height: 50px;
+}
+
+// #btnNavegation button {
+//     padding: 10px 35px;
+//     margin: 0px 20px 0 20px;
+//     border: 2px solid #3747A6;
+//     background-color: #435AD9;
+//     color: #FFF;
+//     text-transform: uppercase;
+//     font-family: 'LemonMilkMedium';
+//     z-index: 999;
+//     cursor: pointer;
+//     width: 230px;
+//     border-radius: 12px;
+// }
